# swagger/protohub.json
@@ -149,7 +149,7 @@
     },
     "/api/v1/project": {
       "get": {
-        "operationId": "getProjectByCode",
+        "operationId": "getProjectById",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -250,12 +250,50 @@
             "type": "integer",
             "format": "int32",
             "default": "10"
-          },
+          }
+        ],
+        "tags": [
+          "project"
+        ],
+        "consumes": [
+          "multipart/form-data"
+        ]
+      }
+    },
+    "/api/v1/project/project_user_list": {
+      "get": {
+        "operationId": "getProjecUsertList",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/GetProjectUserListResponse"
+            }
+          }
+        },
+        "parameters": [
           {
-            "name": "name",
+            "name": "page",
             "in": "query",
             "required": false,
-            "type": "string"
+            "type": "integer",
+            "format": "int32",
+            "default": "1"
+          },
+          {
+            "name": "page_size",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32",
+            "default": "10"
+          },
+          {
+            "name": "project_id",
+            "in": "query",
+            "required": true,
+            "type": "integer",
+            "format": "uint32"
           }
         ],
         "tags": [
@@ -287,6 +325,50 @@
         ],
         "tags": [
           "project"
+        ]
+      }
+    },
+    "/api/v1/project/user_project_list": {
+      "get": {
+        "operationId": "getUserProjectList",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/GetProjectListResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32",
+            "default": "1"
+          },
+          {
+            "name": "page_size",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32",
+            "default": "10"
+          },
+          {
+            "name": "user_id",
+            "in": "query",
+            "required": true,
+            "type": "integer",
+            "format": "uint32"
+          }
+        ],
+        "tags": [
+          "project"
+        ],
+        "consumes": [
+          "multipart/form-data"
         ]
       }
     },
@@ -1210,6 +1292,29 @@
       },
       "title": "GetProjectByIDResponse"
     },
+    "GetProjectListByUserRequest": {
+      "type": "object",
+      "properties": {
+        "page": {
+          "type": "integer",
+          "format": "int32",
+          "default": "1"
+        },
+        "page_size": {
+          "type": "integer",
+          "format": "int32",
+          "default": "10"
+        },
+        "user_id": {
+          "type": "integer",
+          "format": "uint32"
+        }
+      },
+      "title": "GetProjectListByUserRequest",
+      "required": [
+        "user_id"
+      ]
+    },
     "GetProjectListData": {
       "type": "object",
       "properties": {
@@ -1253,9 +1358,6 @@
           "type": "integer",
           "format": "int32",
           "default": "10"
-        },
-        "name": {
-          "type": "string"
         }
       },
       "title": "GetProjectListRequest"
@@ -1275,6 +1377,81 @@
         }
       },
       "title": "GetProjectListResponse",
+      "required": [
+        "total",
+        "list"
+      ]
+    },
+    "GetProjectUserListData": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "name": {
+          "type": "string"
+        },
+        "role_code": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "role_ids": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "int64"
+          }
+        }
+      },
+      "title": "GetProjectUserListData",
+      "required": [
+        "id",
+        "name",
+        "role_code",
+        "role_ids"
+      ]
+    },
+    "GetProjectUserListRequest": {
+      "type": "object",
+      "properties": {
+        "page": {
+          "type": "integer",
+          "format": "int32",
+          "default": "1"
+        },
+        "page_size": {
+          "type": "integer",
+          "format": "int32",
+          "default": "10"
+        },
+        "project_id": {
+          "type": "integer",
+          "format": "uint32"
+        }
+      },
+      "title": "GetProjectUserListRequest",
+      "required": [
+        "project_id"
+      ]
+    },
+    "GetProjectUserListResponse": {
+      "type": "object",
+      "properties": {
+        "total": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "list": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/GetProjectUserListData"
+          }
+        }
+      },
+      "title": "GetProjectUserListResponse",
       "required": [
         "total",
         "list"
